bugfix: allow overflow on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -25,7 +25,6 @@ body {
   margin: 0;
   background-color: #000000;
   color: #ffffff;
-  overflow: hidden;
   font-family: 'Big Noodle Titling';
 }
 
